--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "1.0.0",
   "description": "Veisite SPA application startup",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jmperezvilladeamigo/vst-spa-startup.git"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --inline --content-base ./build --history-api-fallback"
   },
   "author": "Jose Maria Perez",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.2.1"
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-router": "^2.5.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "copy-webpack-plugin": "^3.0.1",
+    "http-server": "^0.9.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
