--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Jose Maria Perez",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.1",
-    "react-router": "^2.5.2"
+    "react-router": "^2.5.2",
+    "react-router-bootstrap": "^0.23.0"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -23,7 +26,11 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "http-server": "^0.9.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
