--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
+    "flux": "^2.1.1",
     "http-server": "^0.9.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
