--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.1",
     "react-router": "^2.5.2",
-    "react-router-bootstrap": "^0.23.0"
+    "react-router-bootstrap": "^0.23.0",
+    "reflux": "^0.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
